--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@ command = "npm install"
 
 [dev]
 command = "npm start"
-publish = "views" # تغييره إلى المجلد الذي تنشئ فيه الملفات الثابتة إذا كنت تستخدمه
+publish = "app.js" 
 
 [[redirects]]
   from = "/*"
